move junit to parent pom